2006-10-02  Tommi Komulainen  <tommi.komulainen@nokia.com>

	Merged small fixes from upstream.

    2005-11-10  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtktreeview.c (gtk_tree_view_motion_resize_column): Another
	erroneous semicolon.

    2005-07-13  Kristian Rietveld  <kris@gtk.org>

	* gtk/gtktreeview.c (gtk_tree_view_new_column_width): let's take
	the MIN of width and max_width here, not width and max_width != -1.
	(fixes #144480, reported by Mikael Magnusson).

2006-10-02  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* gtk/gtktreeview.c (update_checkbox_mode): Stop memory leak after
	losing a pointer to list start. NB#41908

2006-09-25  Kristian Rietveld  <kris@imendio.com>

	Sync with upstream.

	* gtk/gtktreemodelsort.c (gtk_tree_model_sort_finalize):
	Don't leak default_sort_data.  (#346341, Christian Weiske)

	* gtk/gtktreemodelfilter.c (gtk_tree_model_filter_finalize):-
	Clean up user data.  (#344624, Christian Weiske)

	* gtk/gtktreemodelfilter.c (gtk_tree_model_filter_fetch_child):
	update the refs from children to parents for all nodes, since
	they may all have been moved by the insert operation. (#346800,
	patch from Jonathan Matthew).

2006-09-25  Tommi Komulainen  <tommi.komulainen@nokia.com>
	
	* gdk/x11/gdkdisplay-x11.c (gdk_display_x11_finalize): Replace invalid
	g_object_unref() with g_free() (#357566)

2006-09-25  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* gtk/gtkwidget.c (gtk_widget_set_extension_events_internal): New
	function which recursively sets extension events for all GdkWindows
	belonging to the widget.
	(gtk_widget_realize): Use it from here.

2006-09-25  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* gtk/*.c (*_realize): Revert commit r6410 from 2006-09-18 as it's
	stupid.
	
2006-09-21  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* gtk/gtkwidget.c (gtk_widget_tap_and_hold_setup,
	tap_and_hold_free_data): ref+sink and unref the menu instead of
	destroying it. Avoids crashing on showing the menu after a child