@@ -2120,6 +2120,7 @@ gtk_tree_view_size_allocate_columns (GtkWidget *widget)
   gint extra, extra_per_column;
   gint full_requested_width = 0;
   gint number_of_expand_columns = 0;
+  gboolean column_changed = FALSE;
   gboolean rtl;
   GtkWidget *scroll;
   GtkPolicyType ptype;
@@ -2207,7 +2208,7 @@ gtk_tree_view_size_allocate_columns (GtkWidget *widget)
           column->width = widget->allocation.width - width;
           if (column->width < 1)
             column->width = 1;
-          gtk_widget_queue_draw (widget);
+          column_changed = TRUE;
       }
 
       if (column->expand)
@@ -2237,7 +2238,7 @@ gtk_tree_view_size_allocate_columns (GtkWidget *widget)
       width += column->width;
 
       if (column->width > old_width)
-	invalidate_column (tree_view, column);
+        column_changed = TRUE;
 
       gtk_widget_size_allocate (column->button, &allocation);
 
@@ -2247,6 +2248,9 @@ gtk_tree_view_size_allocate_columns (GtkWidget *widget)
 				allocation.y,
                                 TREE_VIEW_DRAG_WIDTH, allocation.height);
     }
+
+  if (column_changed)
+    gtk_widget_queue_draw (GTK_WIDGET (tree_view));
 }
 
 
